# flappy-game

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/game/: AndroidApp.cpp  AndroidApp.h  AndroidRenderer.cpp  AndroidRenderer.h  App.cpp  App.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Common.h  Level.cpp  Level.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Renderer.h  Timer.cpp  Timer.h  main.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/angrygeom/: FullscreenActivity.java  GameView.java  OpenGLRenderer.java
app/src/main/res/layout/: activity_fullscreen.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
